scrollbar fix

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body::-webkit-scrollbar {
     /* for Internet Explorer, Edge */
     scrollbar-width: none;
     /* for Firefox */
+    overflow-y: scroll;
 }
 
 /*Dark Mode*/
